objects/SubscriptionSortByField__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>list of sort by fields for Subscription</description>
    <fields>
        <fullName>LCRM_Sort_By__c</fullName>
        <description>Sort Param Name which are used in USL users(LCRM Subscription webservice and connected with the SAP System)</description>
        <label>LCRM Sort By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portuguese__c</fullName>
        <label>Portuguese</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_By__c</fullName>
        <label>Sort By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish__c</fullName>
        <label>Spanish</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Subscription Sort by Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portuguese__c</columns>
        <columns>Spanish__c</columns>
        <columns>Sort_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>